# bird-stream

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  bodycam.py  cli.py  docker-compose.linux.yml  docker-compose.mac.yml  docker-compose.yml  test.ipynb  verify_fixes.py
.claude/: settings.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements.txt  server.py
backend/controllers/: auth_controller.py  chat_controller.py  health_controller.py  peer_count_controller.py  queue_controller.py  weather_controller.py  webrtc_controller.py
backend/db/: session.py
backend/db/migrations/: alembic.ini  env.py
backend/db/migrations/versions/: a3f1d8c2e904_users_and_auth_tokens.py  a9b2c3d4e5f6_drop_gdpr_ip_consent.py  b7e2a9c4f015_add_updated_at_to_all_tables.py  cc86e0d6d173_initial.py  d4e8f1c2a63b_add_avatar_bio_to_users.py  e5f6a7b8c9d0_add_user_id_to_chat_messages.py  f1a2b3c4d5e6_add_gdpr_ip_consent_to_users.py  f6a7b8c9d0e1_add_sender_type_to_chat_messages.py
backend/models/: __init__.py  datastructures.py  orm.py
backend/models/orm/: __init__.py
backend/models/schemas/: __init__.py  webrtc.py
backend/services/: auth_service.py  chat_service.py  config_service.py  connection_manager.py  email_service.py  queue_service.py  video_service.py  weather_service.py  webrtc_service.py
backend/src/: app.py  app_webrtc.py  app_websocket.py  connection_manager.py  models.py  utils.py  video_stream.py  videocapture.py
backend/src/components/: chat_room.py  connection_manager.py  connection_manager_websockets.py  event_logger.py  mqtt_handler.py  video_stream.py  video_stream_websockets.py  weather.py
backend/tests/integration/: conftest.py  test_chat.py  test_health.py  test_peer_count.py  test_weather.py  test_webrtc.py
backend/tests/unit/: test_chat_service.py  test_queue_service.py
camera-stream-ui/: package.json
coturn/: Dockerfile  turnserver.conf  turnserver.conf.bck
frontend/: .babelrc  Dockerfile  index.html  (+3 more)
(+30 files in other folders)
