[project]
name = "bird-stream-backend"
version = "0.1.0"
description = "WebRTC bird streaming backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.23.2",
    "opencv-python-headless==4.8.1.78",
    "av>=12.0.0",
    "aiortc>=1.8.0",
    "aiohttp>=3.8.6",
    "websockets>=12.0",
    "pytz",
    "numpy<2.0.0",
    "requests",
    "pyyaml",
    "pydantic==2.4.2",
    "paho-mqtt>=1.6.1",
]

[tool.uv]
package = false
