[project]
name = "bird-stream-backend"
version = "0.1.0"
description = "WebRTC bird streaming backend"
requires-python = ">=3.14"
dependencies = [
    "litestar[standard]>=2.12",
    "uvicorn>=0.30",
    "opencv-python-headless==4.8.1.78",
    "av>=12.0.0",
    "aiortc>=1.8.0",
    "aiohttp>=3.8.6",
    "websockets>=12.0",
    "pytz",
    "numpy<2.0.0",
    "requests",
    "pyyaml",
    "msgspec>=0.19.0",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.50",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.6.0",
    "paho-mqtt>=1.6.1",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4.0",
    "python-dotenv>=1.2.2",
    "typer>=0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
package = false
